Added some controls at the input file and now it works. There is a problem with the path of an input file on Eclipse browser, but from Chrome it works correctly.